# tinyrad

./: .gitignore  COPYING.md  ChangeLog.md  DeveloperNotes.md  Makefile.am  NEWS.md  README.md  TODO.md  acinclude.m4  configure.ac
build-aux/: git-tar-name.txt
doc/: rfc-index.txt  tinyrad.conf-example.in  tinyrad.conf.in
doc/mans/: tinyrad-strings.5.in  tinyrad.3.in  tinyrad.conf.5.in  tinyrad_array.3.in  tinyrad_error.3.in  tinyrad_options.3.in  tinyrad_queue.3.in  tinyrad_stack.3.in
doc/rfc/: .gitignore
examples/: seed-by-clock.c  socket-example.c
include/: tinyrad.h  tinyrad_common.h  tinyrad_compat.h  tinyrad_internal.h  tinyrad_utils.h  trutils.h
lib/libtinyrad/: larray.c  larray.h  lconf.c  lconf.h  ldata.c  ldata.h  ldebug.c  ldebug.h  ldict.c  ldict.h  lerror.c  lerror.h  lfile.c  lfile.h  libtinyrad.h  libtinyrad.sym  lmap.c  lmap.h  lmemory.c  lmemory.h  lnet.c  lnet.h  loid.c  loid.h  lproto.c  lproto.h  lstrings.c  lstrings.h  lurl.c  lurl.h
lib/libtrutils/: lfile.h  libtrutils.h  llogging.h  lmisc.c  lmisc.h  lverbose.c  lverbose.h
lib/libutils/: lfile.c  lfile.h  libutils.h  llogging.c  llogging.h  lmisc.c  lmisc.h
m4/: .gitignore
src/: common.c  common.h  tinyrad-dict.c  tinyrad-url.c  tinyrad.c  tinyradproxy.c
src/client/: ccommon.h  cmain.c  cmain.h  common.h  tinyrad.c
src/proxy/: common.h  pcommon.h  pmain.c  pmain.h  tinyradproxy.c
src/tinyrad/: tcommon.h  tmain.c  tmain.h
src/tinyradutil/: tinyradutil.c  tinyradutil.h
src/tru/: tinyrad.c  tinyradutil.c  tinyradutil.h  tru.c  tru.h  widget-client.c  widget-config.c  widget-dict.c  widget-url.c
src/utilities/: common.c  common.h  tinyrad-dict.c  tinyrad-url.c  tinyrad.c  tinyradproxy.c
tests/: common-dict.c  common-dict.h  common-url.c  common-url.h  common.c  common.h  dict-data.c  dict-data.h  test-array-queue.c  test-array-sorted.c  test-array-stack.c  test-array.c  test-assertions.c  test-assumptions.c  test-dict-attrs.c  test-dict-defaults.sh  test-dict-values.c  test-dict-vendors.c  test-oid-str.c  test-options.c  test-pckt-byte-order.c  test-str-expand.c  test-str-split.c  test-url-desc2str.c  test-url-parse.c  test-url-resolve.c  tinyrad-url-desc2str.c  tinyrad-url-parse.c  tinyrad-url-resolve.c
